# mmcow

./: .gitignore  CMakeLists.txt  README.md
include/: cow.h
src/: cow.cpp  unittest_main.cpp
